--- a/404.html
+++ b/404.html
@@ -19,5 +19,18 @@
     ga('create', 'UA-58049775-1', 'auto');
     //ga('send', 'pageview');
     </script>
+	<script>
+    (function () {
+      // Retrieve the URL the user was trying to access when receiving the 404.
+      var redirect = sessionStorage.redirect;
+      // Remove the URL from sessionStorage.
+      delete sessionStorage.redirect;
+      // Check if we actually need to redirect.
+      if (redirect && redirect != location.href) {
+        // We need to redirect to the URL the user was trying to access.
+        history.replaceState(null, null, redirect);
+      }
+    })();
+  </script>
 <script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.9f6e27fc6aedb505e081.js" nomodule defer></script><script src="polyfills-es2015.09ee2f719bd21ab5c7b1.js" type="module"></script><script src="main-es2015.4570c7de22171782de94.js" type="module"></script><script src="main-es5.4570c7de22171782de94.js" nomodule defer></script></body>
 </html>
