--- a/services-ui-development.html
+++ b/services-ui-development.html
@@ -148,32 +148,31 @@
       </div>
     </div>
   </div>
-  <div class="section-similar-project">
-    <div class="wrapper-similar-projects w-container">
-      <div class="grid-similar-projects-text">
-        <div class="text-h2 black left">UI Development Case Studies</div>
-        <a href="#" class="text-button-link-1 w-inline-block">
-          <div class="button-link-icon"></div>
-          <div>View Case Study</div>
-        </a>
+  <div class="section-projects">
+    <div class="wrapper1 project-1 w-container">
+      <div class="case-study-heading-2">
+        <div class="text-h2 black">UI Development Case Studies</div><a href="projects.html"
+          class="text-button-link-2 see-all">see all projects</a>
       </div>
+      <div class="w-layout-grid case-study-grid">
+        <div class="proj-1"><img src="images/Creative upskill.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5">A designers platform for creative upskill</div>
+          <a href="cs-skill-development.html" class="text-button-link-1 w-inline-block">
+            <div class="button-link-icon"></div>
+            <div>View Case Study</div>
+          </a>
+        </div>
+        <div class="proj-1 _2"><img src="images/Repository of accomplishment.png" loading="lazy" alt=""
+            class="project-image">
+          <div class="text-h2-5">Repository of Accomplishments</div>
+          <a href="cs-construction-portal.html" class="text-button-link-1 w-inline-block">
+            <div class="button-link-icon"></div>
+            <div>View Case Study</div>
+          </a>
+        </div>
+      </div>
+      <div class="case-studies-view-all"><a href="projects.html" class="text-button-link-2">View ALl Projects</a></div>
     </div>
-    <div class="w-layout-grid case-study-grid">
-      <div class="proj-1"><img src="images/Creative upskill.png" loading="lazy" alt="" class="project-image">
-        <div class="text-h2-5">A designers platform for creative upskill</div>
-        <a href="cs-skill-development.html" class="text-button-link-1 w-inline-block">
-          <div class="button-link-icon"></div>
-          <div>View Case Study</div>
-        </a>
-      </div>
-      <div class="proj-1 _2"><img src="images/Repository of accomplishment.png" loading="lazy" alt="" class="project-image">
-        <div class="text-h2-5">Repository of Accomplishments</div>
-        <a href="cs-construction-portal.html" class="text-button-link-1 w-inline-block">
-          <div class="button-link-icon"></div>
-          <div>View Case Study</div>
-        </a>
-      </div>
-  </div>
   </div>
   <div class="section-footer">
     <div class="footer-wrapper w-container">
@@ -199,7 +198,7 @@
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
       </svg> 
-      uxmint</a><a href="privacy-polocy.html" class="text-link-3-footer">Privacy policy</a><div class="footer-divider-2"></div><a href="terms-&-conditions.html" class="text-link-3-footer">Terms & Conditions</a></div>
+      uxmint</a><a href="privacy-policy.html" class="text-link-3-footer">Privacy policy</a><div class="footer-divider-2"></div><a href="terms-&-conditions.html" class="text-link-3-footer">Terms & Conditions</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f4886dc233ee29739aa35c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
