--- a/services-user-experience.html
+++ b/services-user-experience.html
@@ -52,19 +52,19 @@
       <div class="div-services-definition right-column">
         <div class="text-h4---22px black">Unravelling solutions for business problems in alignment with end-user expectations. Creating functional, Usable, Pleasurable Unique and Value for digital products.</div>
         <div class="w-layout-grid grid-usability-methods">
-          <div class="grid-item-usability-methods"><img src="images/Group-5754.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods"><img src="images/Group 6482.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Understanding <br>Business</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group-5755.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods"><img src="images/Group 6486.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Platform</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group-5756.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods"><img src="images/Group 6490.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Framework</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Icon-feather-settings.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods"><img src="images/Group 6483.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Manage</div>
           </div>
-          <div class="grid-item-usability-methods"><img src="images/Group-5757.svg" loading="lazy" alt="" class="icons-usability-methods">
+          <div class="grid-item-usability-methods"><img src="images/Group 6502.svg" loading="lazy" alt="" class="icons-usability-methods">
             <div>Testing</div>
           </div>
         </div>
@@ -107,7 +107,7 @@
           <div class="text-h5-grey">Test Feature<br>Viability</div>
         </div>
         <div class="services-grid-content">
-          <div class="div-services-grid"><img src="images/Union 1.svg" loading="lazy" alt="" class="icon-services"></div>
+          <div class="div-services-grid"><img src="images/Group 6507.svg" loading="lazy" alt="" class="icon-services"></div>
           <div class="text-h5-grey">Market<br>Launch</div>
         </div>
       </div>
