UI & naming Fixes

--- a/back-end-development.html
+++ b/back-end-development.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f6491d00506c680f3022257" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>End To End Development</title>
+  <title>uxmint design - Services</title>
   <meta content="services backend development" property="og:title">
   <meta content="services backend development" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
