--- a/child-care-portal.html
+++ b/child-care-portal.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f6b59431dde08da95a5a26c" data-wf-site="5f6b56e1763ff97ee6f130d9">
 <head>
   <meta charset="utf-8">
-  <title>Case Study</title>
+  <title>uxmint design - Case Study</title>
   <meta content="case study" property="og:title">
   <meta content="case study" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
