--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f62f766bf647b1967d8fefd" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>Contact</title>
+  <title>uxmint design - Contact</title>
   <meta content="Contact" property="og:title">
   <meta content="Contact" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
