--- a/front-end-development.html
+++ b/front-end-development.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f64572fdcb3f4620587ba63" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>UI Development</title>
+  <title>uxmint design - Services</title>
   <meta content="services ui development" property="og:title">
   <meta content="services ui development" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
