--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
       </div>
     </div>
   </div>
+  <div class="image-section"><img src="images/Mask Group 105.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-new team">
-    <div class="team-image"><img src="images/Scroll-Group-32x.png" loading="lazy" srcset="images/Scroll-Group-32x-p-500.png 500w, images/Scroll-Group-32x-p-800.png 800w, images/Scroll-Group-32x-p-1080.png 1080w, images/Scroll-Group-32x-p-1600.png 1600w, images/Scroll-Group-32x-p-2000.png 2000w, images/Scroll-Group-32x-p-2600.png 2600w, images/Scroll-Group-32x.png 2732w" sizes="(max-width: 2732px) 100vw, 2732px" alt=""></div>
+    <!-- <div class="team-image"><img src="images/Scroll-Group-32x.png" loading="lazy" srcset="images/Scroll-Group-32x-p-500.png 500w, images/Scroll-Group-32x-p-800.png 800w, images/Scroll-Group-32x-p-1080.png 1080w, images/Scroll-Group-32x-p-1600.png 1600w, images/Scroll-Group-32x-p-2000.png 2000w, images/Scroll-Group-32x-p-2600.png 2600w, images/Scroll-Group-32x.png 2732w" sizes="(max-width: 2732px) 100vw, 2732px" alt=""></div> -->
     <div class="wrapper w-container">
       <div class="w-layout-grid grid-team">
         <div class="text-h2 black">Our team</div>
