--- a/usability-testing.html
+++ b/usability-testing.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f5e0209d14a8541929b0f1d" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>Usability testing</title>
+  <title>uxmint design - Services</title>
   <meta content="services-usabilitytesting" property="og:title">
   <meta content="services-usabilitytesting" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
