--- a/visual-design.html
+++ b/visual-design.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f6348230bb01c4d45ecd664" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title>Interface design</title>
+  <title>uxmint design - Services</title>
   <meta content="services-interface design" property="og:title">
   <meta content="services-interface design" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -89,9 +89,7 @@
       </div>
     </div>
   </div>
-  <div class="section-new">
-    <div class="wrapper w-container"><img src="images/Mask-Group-37.jpg" loading="lazy" srcset="images/Mask-Group-37-p-500.jpeg 500w, images/Mask-Group-37-p-800.jpeg 800w, images/Mask-Group-37.jpg 1048w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 88vw, (max-width: 1293px) 81vw, 1048px" alt=""></div>
-  </div>
+  <div class="image-section"><img src="images/Group 6718.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-new">
     <div class="wrapper grid w-container">
       <div class="w-layout-grid grid-services-4">
