--- a/ux-consulting.html
+++ b/ux-consulting.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f649bd3f6981230616bee85" data-wf-site="5f4886dc233ee29739aa35c1">
 <head>
   <meta charset="utf-8">
-  <title> User Experience</title>
+  <title> uxmint design - Services</title>
   <meta content="services user experience" property="og:title">
   <meta content="services user experience" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
