--- a/event-managment.html
+++ b/event-managment.html
@@ -219,7 +219,7 @@
         </div>
         <div class="proj-1 _2"><img src="images/Organic food.png" loading="lazy" alt="" class="project-image">
           <div class="text-h2-5">To adapt organic food as a Lifestyle</div>
-          <a href="form-to-consumer.html" class="text-button-link-1 w-inline-block">
+          <a href="health-buy.html" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>View Case Study</div>
           </a>
