--- a/health-buy.html
+++ b/health-buy.html
@@ -147,7 +147,7 @@
         <div class="w-layout-grid case-study-grid">
           <div class="proj-1"><img src="images/Customer Advocacy.png" loading="lazy" alt="" class="project-image">
             <div class="text-h2-5">A Customer Advocacy platform</div>
-            <a href="#" class="text-button-link-1 w-inline-block">
+            <a href="marketing.html" class="text-button-link-1 w-inline-block">
               <div class="button-link-icon"></div>
               <div>View Case Study</div>
             </a>
