--- a/marketing.html
+++ b/marketing.html
@@ -135,17 +135,17 @@
       <div class="case-study-heading-2">
         <div class="text-h2 black">Other Case Studies</div><a href="projects.html" class="text-button-link-2 see-all">see all projects</a></div>
       <div class="w-layout-grid case-study-grid-2">
-        <div class="proj-1"><img src="images/proj-1.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5-2">Event Hosting made stressless</div>
-          <a href="#" class="text-button-link-2 w-inline-block">
-            <div class="button-link-icon-2"></div>
+        <div class="proj-1"><img src="images/Digital Transformation.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5">Digital Transformation for telcom</div>
+          <a href="networking.html" class="text-button-link-1 w-inline-block">
+            <div class="button-link-icon"></div>
             <div>View Case Study</div>
           </a>
         </div>
-        <div class="proj-1 _2"><img src="images/proj-2.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5-2">Event Hosting made stressless</div>
-          <a href="#" class="text-button-link-2 w-inline-block">
-            <div class="button-link-icon-2"></div>
+        <div class="proj-1 _2"><img src="images/Childcare.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5">Child Care Portal</div>
+          <a href="child-care-portal.html" class="text-button-link-1 w-inline-block">
+            <div class="button-link-icon"></div>
             <div>View Case Study</div>
           </a>
         </div>
