--- a/blogs.html
+++ b/blogs.html
@@ -79,7 +79,7 @@
         </div>
         <div class="blogs-card">
           <a target="_blank" href="https://medium.com/uxmint/design-exploration-in-my-4hrs-long-journey-2bac23227c6a">
-          <img src="images/Mask-Group-22.png" loading="lazy" alt="">
+          <img src="images/Mask Group 24.png" loading="lazy" alt="">
           <div class="div-blogs-title">
             <div class="text-h3 black">Peripheral Vision & Design Interaction</div>
           </div>
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div class="footer-block-2">
-          <div class="w-layout-grid grid-10"><a href="ux-consulting.html" class="text-link-2-footer">User Experience</a><a href="visual-design.html" class="text-link-2-footer">Interface Design</a><a href="front-end-development.html" class="text-link-2-footer">UI Development</a><a href="back-end-development.html" class="text-link-2-footer">End To End Development</a><a href="usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
+          <div class="w-layout-grid grid-10"><a href=ux-consulting.html" class="text-link-2-footer">User Experience</a><a href=visual-design.html" class="text-link-2-footer">Interface Design</a><a href=front-end-development.html" class="text-link-2-footer">UI Development</a><a href=back-end-development.html" class="text-link-2-footer">End To End Development</a><a href=usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
         </div>
       </div>
       <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2020</a><a class="text-link-3-footer">Made with love 
