--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
       <div class="heading-container">
         <div class="text-h1">Enhance your product with the right strategy</div>
       </div>
-      <div class="container-hero-subtitle"><a href="#" class="text-button-link-1 lower-case">Let us know</a>
+      <div class="container-hero-subtitle"><a href="contact.html" class="text-button-link-1 lower-case">Let us know</a>
         <div class="text-h3 black">what you are looking for</div>
       </div>
     </div>
