--- a/ux-consulting.html
+++ b/ux-consulting.html
@@ -84,7 +84,7 @@
       </div>
       <div class="div-services-offset">
         <div class="text-h3 black">Interaction between User and Product can be made fluent with UX at any stage of a product’s life cycle. Right from birth of an idea, or while idea is evolves into an MVP, Even after its beta released or even if it is a live working product; there is always an opportunity for enhancement (Tesler’s Law states something similar)</div>
-        <a href="#" class="text-button-link-1 w-inline-block">
+        <a href="contact.html" class="text-button-link-1 w-inline-block">
           <div class="button-link-icon"></div>
           <div>let us know</div>
         </a>
