--- a/visual-design.html
+++ b/visual-design.html
@@ -82,7 +82,7 @@
       <div class="text-h2 black left">First impression of a product<br>Matters a lot</div>
       <div class="div-services-offset">
         <div class="text-h3 black">Before even users start using a product, they perceive it. A percentage of their acceptance of the application is based on the visuals they see. Aesthetic and minimal design will retain customers. UI can be created &amp; enhanced after wireframe phase, based on user testing feed back, if the product has not been catching up with the trend, to have a holistic design system or a visual language.</div>
-        <a href="#" class="text-button-link-1 w-inline-block">
+        <a href="contact.html" class="text-button-link-1 w-inline-block">
           <div class="button-link-icon"></div>
           <div>let us know</div>
         </a>
