--- a/front-end-development.html
+++ b/front-end-development.html
@@ -85,7 +85,7 @@
       </div>
       <div class="div-services-offset">
         <div class="text-h3 black">We choose the right framework to suite the business needs in terms: ease of use, scalability, interoperability with standard technology, adaptability with emerging technologies and integration with back-end system.</div>
-        <a href="#" class="text-button-link-1 w-inline-block">
+        <a href="contact.html" class="text-button-link-1 w-inline-block">
           <div class="button-link-icon"></div>
           <div>let us know</div>
         </a>
