--- a/health-buy.html
+++ b/health-buy.html
@@ -118,7 +118,7 @@
   <div class="wireframe">
     <div class="container-csa w-container"><img src="images/csa 3.png" loading="lazy" srcset="images/csa 3-p-500.png 500w, images/csa 3-p-800.png 800w, images/csa 3-p-1080.png 1080w, images/csa 3.png 1260w" sizes="94vw" alt="" class="image-13"></div>
   </div>
-  <div class="section-17">
+  <div class="section-17-health">
     <div class="container-13 w-container">
       <div class="w-layout-grid grid-25">
         <div id="w-node-05ce66aa0538-95a5a26c" class="text-block-19">Prototyping the ideas by building low fidelity wireframes</div>
