--- a/marketing.html
+++ b/marketing.html
@@ -81,7 +81,7 @@
   </div>
   <div class="persona">
     <div class="container-12 w-container">
-      <div class="div-block-80" style="background-color: #00B15B;">
+      <div class="div-block-80-marketing" style="background-color: #00B15B;">
         <div>
           <div class="text-block-marketing16">Needs</div>
           <div class="text-block-marketing">- Fast and Simple Design</div>
