--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -65,7 +65,7 @@
       </div>
       <div class="div-block-119">
         <div class="text-h2-2 black">Your Acceptance Of These Terms</div>
-        <div class="text-terms">If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at: UX MINT KCV Towers,No. 23,2nd Floor, Ram Nagar North Extn, 7th main road, Velachery, Chennai-600042 | enquiry@uxmint.in<br><br>This document was last updated on Oct 16 2017.</div>
+        <div class="text-terms">If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at: UX MINT KCV Towers,No. 23,2nd Floor, Ram Nagar North Extn, 7th main road, Velachery, Chennai-600042 | hello@uxmint.in<br><br>This document was last updated on Oct 16 2017.</div>
       </div>
     </div>
   </div>
