--- a/skill-development.html
+++ b/skill-development.html
@@ -81,7 +81,7 @@
   </div>
   <div class="persona">
     <div class="container-12 w-container">
-      <div class="div-block-80" style="background-color: #742EB1;">
+      <div class="div-block-80-skill" style="background-color: #742EB1;">
         <div class="div-block-82">
           <div class="text-h2-2">50 +Users Interviewed</div>
         </div>
