--- a/about-us.html
+++ b/about-us.html
@@ -35,7 +35,7 @@
         <div class="text-h1">There is always a better way to do it &amp; we find it</div>
       </div>
       <div class="container-hero-subtitle">
-        <div class="text-h3 black">Said Thomas Alva Edison</div>
+        <div class="text-h3 black">said Thomas Alva Edison</div>
         <div class="text-button-link-1 lower-case">+ uxmint</div>
       </div>
     </div>
@@ -63,7 +63,7 @@
         </div>
         <div>
           <div class="div-aboutus-services">
-            <div class="text-h2-5">Established brands</div>
+            <div class="text-h2-5">Established Brands</div>
           </div>
           <div class="text-h3 black">We work with mid-size or large-size organisations in designing or redesigning complex systems. Optimising the process to bring transformation to the legacy system.</div>
         </div>
