--- a/back-end-development.html
+++ b/back-end-development.html
@@ -26,7 +26,7 @@
       <div class="w-layout-grid grid-services-header">
         <div class="text-h1">End To End Development</div>
         <div class="div-services-header-content">
-          <div class="text-h4---22px black">Designing scalable platform harnessing the technology for business reach to their end users with the better user experience, engagement and adaptablity</div>
+          <div class="text-h4---22px black">Designing scalable platform harnessing the technology for business reach to their end users with the better user experience, engagement and adaptablity.</div>
           <!-- <a href="#" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>See how we do it</div>
@@ -81,7 +81,7 @@
         <div class="text-h2 black left">Choosing the right tech stack</div>
       </div>
       <div class="div-services-offset">
-        <div class="text-h3 black">We choose the right Tech Stack based on the detailed Analysis of User Behaviour and the Business needs in terms of, ease of use scalability interoperability with standardization adaptability with emerging trends integration with array of UI platforms (Responsive, Android, iOS &amp; Wearables)</div>
+        <div class="text-h3 black">We choose the right Tech Stack based on the detailed Analysis of User Behaviour and the Business needs in terms of, ease of use scalability interoperability with standardization adaptability with emerging trends integration with array of UI platforms (Responsive, Android, iOS &amp; Wearables).</div>
         <a href="contact.html" class="text-button-link-1 w-inline-block">
           <div class="button-link-icon"></div>
           <div>let us know</div>
