--- a/blogs.html
+++ b/blogs.html
@@ -32,7 +32,7 @@
     <div class="wrapper hero w-container">
       <div class="text-accent-1">BLOGS</div>
       <div class="heading-container">
-        <div class="text-h1">Mintify your thoughts with our latest blogs and articles</div>
+        <div class="text-h1">MINTify your thoughts with our latest blogs and articles</div>
       </div>
       <div class="text-h3 black">For more blogs like this checkout our Medium</div>
     </div>
