--- a/construction-portal.html
+++ b/construction-portal.html
@@ -62,7 +62,7 @@
     <div class="container-10 w-container">
       <div class="div-block-79">
         <div class="text-aaaaaa">Approach</div>
-        <div class="text-h2-2 black">Our aim was to solve and eased the process of find-ability. And to create a multi leveled navigation system.</div>
+        <div class="text-h2-2 black">Our aim was to solve and ease the process of find-ability and to create multi leveled navigation system.</div>
       </div>
     </div>
   </div>
