--- a/event-managment.html
+++ b/event-managment.html
@@ -35,7 +35,7 @@
   <div class="section-12">
     <div class="case-study-wrapper w-container">
       <div class="div-block-77">
-        <div class="text-accent-2">Case study • Event Management</div>
+        <div class="text-accent-2">Case study • Event Management • B2B2C</div>
         <div class="text-h1-2">Event Hosting made Stressless</div>
       </div>
       <div class="div-block-78">
@@ -211,7 +211,7 @@
         <div class="text-h2 black">Other Case Studies</div><a href="projects.html" class="text-button-link-2 see-all">see all projects</a></div>
       <div class="w-layout-grid case-study-grid-2">
         <div class="proj-1"><img src="images/Customer Advocacy.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5">A Customer Advocacy platform</div>
+          <div class="text-h2-5">A Customer Advocacy Platform</div>
           <a href="#" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>View Case Study</div>
