--- a/front-end-development.html
+++ b/front-end-development.html
@@ -33,7 +33,7 @@
       <div class="w-layout-grid grid-services-header">
         <div class="text-h1">UI Development</div>
         <div class="div-services-header-content">
-          <div class="text-h4---22px black">The design comes to life when the robust technologies are put in place to bring the best Experience</div>
+          <div class="text-h4---22px black">The design comes to life when the robust technologies are put in place to bring the best Experience.</div>
           <!-- <a href="#" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>see how we do it</div>
