--- a/health-buy.html
+++ b/health-buy.html
@@ -50,7 +50,7 @@
       <div class="team-content">
         <div class="w-layout-grid grid-team-2">
           <div id="w-node-031d7e894037-95a5a26c" class="text-h2-2 black">About Project</div>
-          <div class="text-h3-2 black">With a shift towards organic food consumption by people, and increased middlemen commissions the life of a normal farmer becomes worse day by day.<br>This platform helps the local farming communities to produce food that the customer wants and deliver them directly avoiding the middlemen thus creating a sustainable and happy farming community.</div>
+          <div class="text-h3-2 black">With a shift towards organic food consumption by people, and increased middle-men commissions the life of a normal farmer becomes worse day by day.<br>This platform helps the local farming communities to produce food based on customer demand and deliver them directly avoiding the middle-men thus creating a sustainable and happy farming community.</div>
         </div>
       </div>
     </div>
@@ -146,7 +146,7 @@
         <div class="text-h2 black">Other Case Studies</div><a href="projects.html" class="text-button-link-2 see-all">see all projects</a></div>
         <div class="w-layout-grid case-study-grid">
           <div class="proj-1"><img src="images/Customer Advocacy.png" loading="lazy" alt="" class="project-image">
-            <div class="text-h2-5">A Customer Advocacy platform</div>
+            <div class="text-h2-5">A Customer Advocacy Platform</div>
             <a href="marketing.html" class="text-button-link-1 w-inline-block">
               <div class="button-link-icon"></div>
               <div>View Case Study</div>
