--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <div class="section-new black">
     <div class="wrapper what-we-do w-container">
       <div class="w-layout-grid grid-what-we-do">
-        <div class="text-h2">We sculpt products that Users admire &amp; Businesses benefit.</div>
-        <div class="text-h3">We’ve created and collaborated on to build lots of great products like Information portals, Enterprise applications, Digital transformation, Mobile apps, Product Developments &amp; More</div>
+        <div class="text-h2">Sculpting products that Users admire &amp; Businesses benefit</div>
+        <div class="text-h3">We’ve created and collaborated on to build lots of great products like Information portals, Enterprise applications, Digital transformation, Mobile apps, Product Developments &amp; More...</div>
       </div>
     </div>
   </div>
@@ -61,7 +61,7 @@
         <div class="text-h2 black">Case Studies</div><a href="projects.html" class="text-button-link-1 see-all">see all projects</a></div>
       <div class="w-layout-grid case-study-grid">
         <div class="proj-1"><img src="images/Digital Transformation.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5">Digital Transformation for telcom</div>
+          <div class="text-h2-5">Digital Transformation for Telcom</div>
             <a href="networking.html" class="text-button-link-1 w-inline-block">
               <div class="button-link-icon"></div>
               <div>View Case Study</div>
