--- a/marketing.html
+++ b/marketing.html
@@ -35,12 +35,11 @@
   <div class="section-12">
     <div class="case-study-wrapper w-container">
       <div class="div-block-77">
-        <div class="text-accent-2">Case study • Marketing</div>
-        <div class="text-h1-2">A Customer Advocacy<br>platform</div>
+        <div class="text-accent-2">Case study • Marketing • B2B2C</div>
+        <div class="text-h1-2">A Customer Advocacy<br>Platform</div>
       </div>
       <div class="div-block-78">
         <div class="text-aaaaaa">Service Catered</div>
-        <div class="text-block-14">B2B2C</div>
         <div class="text-block-14">Web Portal</div>
         <div class="text-block-14">Branding</div>
       </div>
@@ -61,7 +60,7 @@
     <div class="container-10 w-container">
       <div class="div-block-79">
         <div class="text-aaaaaa">Approach</div>
-        <div class="text-h2-2 black">Our Primary objective is to resurrect idea of "Word of Mouth" to merge with Consumer Advocacy which enables endless possibilities</div>
+        <div class="text-h2-2 black">Our Primary objective is to resurrect idea of "Word of Mouth" to merge with Consumer Advocacy that can enable endless possibilities.</div>
       </div>
     </div>
   </div>
@@ -74,7 +73,7 @@
         </div>
         <div><img src="images/Group-6399_1Group 6399.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3 black">Strategy</div>
-          <div class="text-h3-3 black">Enabling Customer engagement, Marketing Campaigns, Surveys, Social proofing and Engagement, all in one place to track the customer advocacy over a period of time.</div>
+          <div class="text-h3-3 black">Enabling Customer engagement, Marketing Campaigns, Surveys, Social Proofing and Engagement, all in one place to track the Customer Advocacy over a period of time.</div>
         </div>
       </div>
     </div>
@@ -88,7 +87,7 @@
           <div class="text-block-marketing">- Track Activity and Daily Tasks</div>
           <div class="text-block-marketing">- Motivation & Appreciation</div>
           <div class="text-block-marketing">- Reliable Platform</div>
-          <div class="text-block-marketing">- Interactive environment</div>
+          <div class="text-block-marketing">- Interactive Environment</div>
           <div class="text-block-marketing">- Getting Testimonials</div>
           <div class="text-block-marketing">- Social Status</div>
           <div class="text-block-marketing16">Challenges</div>
