--- a/networking.html
+++ b/networking.html
@@ -35,7 +35,7 @@
   <div class="section-12">
     <div class="case-study-wrapper w-container">
       <div class="div-block-77">
-        <div class="text-accent-2">Case study • Digital Transformation</div>
+        <div class="text-accent-2">Case study • Digital Transformation • B2B</div>
         <div class="text-h1-2">Digital Transformation for telcom</div>
       </div>
       <div class="div-block-78">
