--- a/ux-consulting.html
+++ b/ux-consulting.html
@@ -33,7 +33,7 @@
       <div class="w-layout-grid grid-services-header">
         <div class="text-h1">User Experience</div>
         <div class="div-services-header-content">
-          <div class="text-h4---22px black">Digital Products we use in our daily lives should behave as good as the nicest person we know</div>
+          <div class="text-h4---22px black">Digital Products we use in our daily lives should behave as good as the nicest person we know!</div>
           <!-- <a href="#" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>see how we do it</div>
@@ -127,7 +127,7 @@
       </div>
       <div class="w-layout-grid case-study-grid">
         <div class="proj-1"><img src="images/Digital Transformation.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5">Digital Transformation for telcom</div>
+          <div class="text-h2-5">Digital Transformation for Telcom</div>
           <a href="networking.html" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>View Case Study</div>
@@ -149,7 +149,7 @@
     <div class="footer-wrapper w-container">
       <div class="footer-idea">
         <div class="w-layout-grid grid-8">
-          <div class="text-h2">Have an Idea?</div><a href="contact.html" class="button-1 outline w-button">LEt&#x27;s Discuss</a></div>
+          <div class="text-h2">Have an Idea?</div><a href="contact.html" class="button-1 outline w-button">Let&#x27;s Discuss</a></div>
       </div>
       <div class="div-block-52"></div>
       <div class="footercontent">
