--- a/uxahead.html
+++ b/uxahead.html
@@ -42,7 +42,7 @@
         <div class="text-aaaaaa">Service Catered</div>
         <div class="text-block-14">UX and UI</div>
         <div class="text-block-14">Brand Identity</div>
-        <div class="text-block-14">Business Card</div>
+        <div class="text-block-14">Print Material Design</div>
       </div>
     </div>
   </div>
