--- a/child-care-portal.html
+++ b/child-care-portal.html
@@ -85,7 +85,7 @@
     <div class="container-12 w-container">
       <div class="div-block-80-child">
         <div class="div-block-82">
-          <div class="text-h2-2-child">The challenge</div>
+          <div class="text-h2-2-child">The Challenge</div>
         </div>
         <div class="text-h3-3">The challenge was to create a intuitive prototype which the kids can use to create new things and show their love for their donors.</div>
       </div>
@@ -115,7 +115,7 @@
           </a>
         </div>
         <div class="proj-1 _2"><img src="images/Digital Transformation.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5">Digital Transformation for telcom</div>
+          <div class="text-h2-5">Digital Transformation for Telcom</div>
           <a href="networking.html" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>View Case Study</div>
