--- a/visual-design.html
+++ b/visual-design.html
@@ -33,7 +33,7 @@
       <div class="w-layout-grid grid-services-header">
         <div class="text-h1">Interface Design</div>
         <div class="div-services-header-content">
-          <div class="text-h4---22px black">Having interface fluent enough for the user to communicate with the system or product is fundamental necessity</div>
+          <div class="text-h4---22px black">Having interface fluent enough for the user to communicate with the system or product is fundamental necessity.</div>
           <!-- <a href="#" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>see how we do it</div>
