--- a/ux-consulting.html
+++ b/ux-consulting.html
@@ -142,7 +142,7 @@
           </a>
         </div>
       </div>
-      <div class="case-studies-view-all"><a href="projects.html" class="text-button-link-2">View ALl Projects</a></div>
+      <div class="case-studies-view-all"><a href="projects.html" class="text-button-link-2">See ALl Projects</a></div>
     </div>
   </div>
   <div class="section-footer">
