--- a/visual-design.html
+++ b/visual-design.html
@@ -89,7 +89,13 @@
       </div>
     </div>
   </div>
-  <div class="image-section"><img src="images/Group 6718.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
+  <div class="image-section-interface"><img src="images/Group 6718.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
+  <div class="section-new black">
+    <div class="wrapper w-container">
+      <div class="text-h2 grey">A product with<br>good Interface Design will</div>
+      <div class="text-h2">Establish a visual language for seamless interaction</div>
+    </div>
+  </div>
   <div class="section-new">
     <div class="wrapper grid w-container">
       <div class="w-layout-grid grid-services-4">
@@ -116,12 +122,6 @@
           <div class="text-h3 black">Evaluating user interface design every once in a while will give us insights and ideas about enhancing design and business based on user’s feedback.</div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="section-new black">
-    <div class="wrapper w-container">
-      <div class="text-h2 grey">A product with<br>good Interface Design will</div>
-      <div class="text-h2">Establish a visual language for seamless interaction</div>
     </div>
   </div>
   <!-- <div class="section-similar-project">
