--- a/child-care-portal.html
+++ b/child-care-portal.html
@@ -122,7 +122,7 @@
           </a>
         </div>
       </div>
-      <div class="case-studies-view-all"><a href="#" class="text-button-link-2">View ALl Projects</a></div>
+      <div class="case-studies-view-all"><a href="projects.html" class="text-button-link-2">See ALl Projects</a></div>
     </div>
   </div>
   <div class="section-footer">
