--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </a>
         </div>
       </div>
-      <div class="case-studies-view-all"><a href="#" class="text-button-link-1">View ALl Projects</a></div>
+      <div class="case-studies-view-all"><a href="projects.html" class="text-button-link-1">See ALl Projects</a></div>
     </div>
   </div>
   <div class="section-new clients">
