--- a/end-to-end-development.html
+++ b/end-to-end-development.html
@@ -5,6 +5,8 @@
 <head>
   <meta charset="utf-8">
   <title>uxmint design - Services</title>
+  <meta name="description" content="Designing scalable platform harnessing the technology for business reach to their end users with the better user experience, engagement and adaptablity." />
+  <meta name="keywords" content="Product Development, app development, back-end development, cx strategy, strategy design, design studio, digital transformation, graphic design, ui design, user experience, uxd, xd, design consulting, design consultants, app design">
   <meta content="services backend development" property="og:title">
   <meta content="services backend development" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -39,7 +41,7 @@
     <div class="w-layout-grid navigation-menu-grid">
       <div class="costom-nav-container-1"><a href="index.html" class="text-navmenu-link-1">Home</a><a href="projects.html" class="text-navmenu-link-1">Works</a><a href="services.html" class="text-navmenu-link-1">Services</a></div>
       <div class="costom-nav-container-1"><a href="about-us.html" class="text-navmenu-link-1">About us</a><a href="blogs.html" class="text-navmenu-link-1">Blogs</a><a href="contact.html" class="text-navmenu-link-1">Contact</a></div>
-      <div class="costom-nav-container-1"><a href="ux-consulting.html" class="text-navmenu-link-2">User Experience</a><a href="visual-design.html" class="text-navmenu-link-2">Interface Design</a><a href="front-end-development.html" class="text-navmenu-link-2">UI Development</a><a href="back-end-development.html" class="text-navmenu-link-2">End To End Development</a><a href="usability-testing.html" class="text-navmenu-link-2">Usability Testing</a></div>
+      <div class="costom-nav-container-1"><a href="ux-consulting.html" class="text-navmenu-link-2">User Experience</a><a href="ui-design.html" class="text-navmenu-link-2">Interface Design</a><a href="ui-development.html" class="text-navmenu-link-2">UI Development</a><a href="end-to-end-development.html" class="text-navmenu-link-2">End To End Development</a><a href="usability-testing.html" class="text-navmenu-link-2">Usability Testing</a></div>
     </div>
     <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a data-w-id="8a4fddf2-7cc4-77c8-ac00-81affe90f4c3" href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a></div>
   <div class="section-banner backend"></div>
@@ -182,7 +184,7 @@
           </div>
         </div>
         <div class="footer-block-2">
-          <div class="w-layout-grid grid-10"><a href="ux-consulting.html" class="text-link-2-footer">User Experience</a><a href="visual-design.html" class="text-link-2-footer">Interface Design</a><a href="front-end-development.html" class="text-link-2-footer">UI Development</a><a href="back-end-development.html" class="text-link-2-footer">End To End Development</a><a href="usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
+          <div class="w-layout-grid grid-10"><a href="ux-consulting.html" class="text-link-2-footer">User Experience</a><a href="ui-design.html" class="text-link-2-footer">Interface Design</a><a href="ui-development.html" class="text-link-2-footer">UI Development</a><a href="end-to-end-development.html" class="text-link-2-footer">End To End Development</a><a href="usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
         </div>
       </div>
       <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2020</a><a class="text-link-3-footer">Made with love 
