--- a/usability-testing.html
+++ b/usability-testing.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="utf-8">
   <title>uxmint design - Services</title>
-  <meta name="description" content="" />
-  <meta name="keywords" content="">
+  <meta name="description" content="Reduce the risk of usability issues before the product launch into the market." />
+  <meta name="keywords" content="Usability testing, user testing, exploratory testing, launch preparedness, experience design, remote user testing, iterative testing, product testing, analytics, user analytics">
   <meta content="services-usabilitytesting" property="og:title">
   <meta content="services-usabilitytesting" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
