--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:300,regular,500,600","Noto Serif:regular,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="images/favicon.svg" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.svg" rel="apple-touch-icon">
 </head>
 <body>
   <div class="nav-bar"><a href="index.html" class="w-inline-block"><img src="images/logo-2.png" loading="lazy" alt=""></a><a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group-5518.svg" loading="lazy" alt=""></a></div>
@@ -39,7 +39,7 @@
         <div class="text-h1">We are eager to get in touch with you as well.</div>
       </div>
       <div class="container-hero-subtitle">
-        <div class="text-h3 black">You can drop us an email at</div><a href="#" class="text-button-link-1 lower-case">hello@uxmint.in</a></div>
+        <div class="text-h3 black">You can drop us an email at</div><a href="mailto:hello@uxmint.in" class="text-button-link-1 lower-case">hello@uxmint.in</a></div>
     </div>
   </div>
   <div class="section-new contact">
