--- a/terms-&-conditions.html
+++ b/terms-&-conditions.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f6d9d4f2f8e7aaafbffb62f" data-wf-site="5f6d9d4f2f8e7a68b3ffb628">
 <head>
   <meta charset="utf-8">
-  <title>Terms and Conditions</title>
+  <title>uxmint design - Terms and Conditions</title>
   <meta content="Privacy polocy" property="og:title">
   <meta content="Privacy polocy" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
