--- a/usability-testing.html
+++ b/usability-testing.html
@@ -36,10 +36,14 @@
         <div class="text-h1">Usability testing</div>
         <div class="div-services-header-content">
           <div class="text-h4---22px black">Reduce the risk of usability issues before the product launces into the market</div>
-          <!-- <a href="#" class="text-button-link-1 w-inline-block">
+          <a href="#testing-tab-1" class="text-button-link-1-usability1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>See usability testing methods</div>
-          </a> -->
+          </a>
+          <a href="#testing-tab-2" class="text-button-link-1-usability2 w-inline-block">
+            <div class="button-link-icon"></div>
+            <div>See usability testing methods</div>
+          </a>
         </div>
       </div>
     </div>
@@ -194,13 +198,12 @@
       </div>
     </div>
   </div> -->
-  <div class="section-new-1">
+  <div class="section-new-1" id="testing-tab-1">
     <div class="wrapper-3 w-container">
       <div data-duration-in="500" data-duration-out="500" class="w-tabs">
         <div class="tabs-menu-3 w-tab-menu">
           <a data-w-tab="1" class="tab w-inline-block w-tab-link">
-            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24.287" height="25.719"
-                viewbox="0 0 24.287 25.719">
+            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
                 <g id="Group_5738" data-name="Group 5738" transform="translate(-399.5 -1878.381)">
                   <path id="Path_9457" data-name="Path 9457"
                     d="M4734.6,11462.1v6.411l-7.87,13.03s-2.536,3.909,2.438,4.559c.148-.036,15.9,0,15.9,0s5.038.092,2.592-4.559c.075.031-8.112-13.03-8.112-13.03v-6.411"
@@ -210,11 +213,12 @@
                   <line id="Line_99" data-name="Line 99" x2="14.784" transform="translate(404.02 1894.166)" fill="none"
                     stroke="currentColor" stroke-linecap="round" stroke-width="2"></line>
                 </g>
-              </svg></div>
-            <div class="tab-text">Controlled Environment <br>Testing</div>
+              </svg>
+              </div>
+            <div class="tab-text-1">Controlled Environment <br>Testing</div>
           </a>
           <a data-w-tab="2" class="tab w-inline-block w-tab-link w--current">
-            <div class="logo w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewbox="0 0 26 26">
+            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
                 <g id="Group_5739" data-name="Group 5739" transform="translate(-616 -1861)">
                   <g id="Icon_feather-compass" data-name="Icon feather-compass" transform="translate(617 1862)">
                     <path id="Path_9459" data-name="Path 9459" d="M27,15A12,12,0,1,1,15,3,12,12,0,0,1,27,15Z"
@@ -225,11 +229,12 @@
                       stroke-linejoin="round" stroke-width="2"></path>
                   </g>
                 </g>
-              </svg></div>
+              </svg>
+            </div>
             <div class="tab-text-1">Exploratory <br>Testing</div>
           </a>
           <a data-w-tab="3" class="tab w-inline-block w-tab-link">
-            <div class="logo w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewbox="0 0 26 26">
+            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
                 <g id="Icon_feather-globe" data-name="Icon feather-globe" transform="translate(-2 -2)">
                   <path id="Path_9461" data-name="Path 9461" d="M27,15A12,12,0,1,1,15,3,12,12,0,0,1,27,15Z"
                     transform="translate(0 0)" fill="none" stroke="currentColor" stroke-linecap="round"
@@ -245,8 +250,7 @@
             <div class="tab-text-1">Remote<br>Testing</div>
           </a>
           <a data-w-tab="4" class="tab w-inline-block w-tab-link">
-            <div class="logo w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="18.8" height="26"
-                viewbox="0 0 18.8 26">
+            <div class="logo-1 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
                 <path id="Icon_material-location-on" data-name="Icon material-location-on"
                   d="M15.9,3a8.394,8.394,0,0,0-8.4,8.4c0,6.3,8.4,15.6,8.4,15.6s8.4-9.3,8.4-15.6A8.394,8.394,0,0,0,15.9,3Zm0,11.4a3,3,0,1,1,3-3A3,3,0,0,1,15.9,14.4Z"
                   transform="translate(-6.5 -2)" fill="none" stroke="currentColor" stroke-linecap="round"
@@ -257,7 +261,7 @@
         </div>
         <div class="w-tab-content">
           <div data-w-tab="1" class="w-tab-pane">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Controlled Environment testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -268,7 +272,7 @@
             </div>
           </div>
           <div data-w-tab="2" class="w-tab-pane w--tab-active">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Exploratory testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -279,7 +283,7 @@
             </div>
           </div>
           <div data-w-tab="3" class="w-tab-pane">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Remote Testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -290,7 +294,7 @@
             </div>
           </div>
           <div data-w-tab="4" class="w-tab-pane">
-            <div class="w-layout-grid grid-2-column">
+            <div class="w-layout-grid grid-2-column-usability">
               <div class="text-h2-2 black left">Contextual testing</div>
               <div>
                 <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
@@ -304,26 +308,26 @@
       </div>
     </div>
   </div>
-  <div class="section-new-2">
+  <div class="section-new-2" id="testing-tab-2">
     <div class="wrapper-3 w-container">
       <div class="w-layout-grid grid-services-4">
         <a href="#Controlled-Environment-Testing" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group-5738.svg" loading="lazy" alt="" class="icon-services">
+          <div class="div-services-grid"><img src="images/Group 6454.svg" loading="lazy" alt="" class="icon-services">
           </div>
           <div class="text-h5-grey-2">Controlled Environment<br>Testing</div>
         </a>
         <a href="#Exploratory-testing" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Group-5771.svg" loading="lazy" alt="" class="icon-services">
+          <div class="div-services-grid"><img src="images/Group 6459.svg" loading="lazy" alt="" class="icon-services">
           </div>
           <div class="text-h5-grey-2">Exploratory <br>Testing</div>
         </a>
         <a href="#Remote-testing" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Icon-feather-globe.svg" loading="lazy" alt=""
+          <div class="div-services-grid"><img src="images/Group 6461.svg" loading="lazy" alt=""
               class="icon-services"></div>
           <div class="text-h5-grey-2">Remote<br>Testing</div>
         </a>
         <a href="#Contextual-testing" class="services-grid-content w-inline-block">
-          <div class="div-services-grid"><img src="images/Icon-material-location-on.svg" loading="lazy" alt=""
+          <div class="div-services-grid"><img src="images/Group 6460.svg" loading="lazy" alt=""
               class="icon-services"></div>
           <div class="text-h5-grey-2">Contextual <br>testing</div>
         </a>
